err/t3.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/t3'...
Compiling './lib/python3.5/site-packages/t3/chart.py'...
***   File "./lib/python3.5/site-packages/t3/chart.py", line 198
    print "Initial assignments"
                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/t3/number.py'...
***   File "./lib/python3.5/site-packages/t3/number.py", line 883
    print Bcd(d)
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/t3/pattern.py'...
***   File "./lib/python3.5/site-packages/t3/pattern.py", line 746
    print "1:8..1:6", T3Pattern("1:8..1:6").match("FF")
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/t3/table.py'...
***   File "./lib/python3.5/site-packages/t3/table.py", line 666
    except MatchingFailure, f:
                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/t3-0.1.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
